--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12874,7 +12874,7 @@ fieldset[disabled] .btn {
 /* /Lite image */
 
 /* Meet Host Card */
-.meet-host-card {
+.card-alt-3 {
   background: 0 0 !important;
   border: none !important;
   color: inherit !important;
@@ -12889,46 +12889,46 @@ fieldset[disabled] .btn {
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
 }
-.meet-host-card__lite-image-wrapper {
+.card-alt-3__lite-image-wrapper {
   border-radius: 8px !important;
   margin-bottom: 8px !important;
   overflow: hidden !important;
 }
 @media (min-width: 744px) {
-  .meet-host-card__lite-image-wrapper {
+  .card-alt-3__lite-image-wrapper {
     border-radius: 12px !important;
   }
 }
 @media (min-width: 1128px) {
-  .meet-host-card__lite-image-wrapper {
+  .card-alt-3__lite-image-wrapper {
     margin-bottom: 24px !important;
   }
 }
-.meet-host-card__title {
+.card-alt-3__title {
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 800 !important;
   margin-bottom: 4px !important;
 }
 @media (min-width: 1128px) {
-  .meet-host-card__title {
+  .card-alt-3__title {
     font-size: 18px !important;
     line-height: 24px !important;
   }
 }
-.meet-host-card__subtitle {
+.card-alt-3__subtitle {
   margin-bottom: 4px !important;
 }
 @media (min-width: 1128px) {
-  .meet-host-card__subtitle {
+  .card-alt-3__subtitle {
     margin-bottom: 8px !important;
   }
 }
-.meet-host-card__text {
+.card-alt-3__text {
   display: none !important;
 }
 @media (min-width: 1128px) {
-  .meet-host-card__text {
+  .card-alt-3__text {
     font-size: 16px !important;
     line-height: 24px !important;
     display: block !important;
