--- a/src/css/components/cards/card-alt-3.css
+++ b/src/css/components/cards/card-alt-3.css
@@ -1,5 +1,5 @@
-/* Meet Host Card */
-.meet-host-card {
+/* Card Alt 3 */
+.card-alt-3 {
   background: 0 0 !important;
   border: none !important;
   color: inherit !important;
@@ -14,50 +14,50 @@
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
 }
-.meet-host-card__lite-image-wrapper {
+.card-alt-3__lite-image-wrapper {
   border-radius: 8px !important;
   margin-bottom: 8px !important;
   overflow: hidden !important;
 }
 @media (min-width: 744px) {
-  .meet-host-card__lite-image-wrapper {
+  .card-alt-3__lite-image-wrapper {
     border-radius: 12px !important;
   }
 }
 @media (min-width: 1128px) {
-  .meet-host-card__lite-image-wrapper {
+  .card-alt-3__lite-image-wrapper {
     margin-bottom: 24px !important;
   }
 }
-.meet-host-card__title {
+.card-alt-3__title {
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 800 !important;
   margin-bottom: 4px !important;
 }
 @media (min-width: 1128px) {
-  .meet-host-card__title {
+  .card-alt-3__title {
     font-size: 18px !important;
     line-height: 24px !important;
   }
 }
-.meet-host-card__subtitle {
+.card-alt-3__subtitle {
   margin-bottom: 4px !important;
 }
 @media (min-width: 1128px) {
-  .meet-host-card__subtitle {
+  .card-alt-3__subtitle {
     margin-bottom: 8px !important;
   }
 }
-.meet-host-card__text {
+.card-alt-3__text {
   display: none !important;
 }
 @media (min-width: 1128px) {
-  .meet-host-card__text {
+  .card-alt-3__text {
     font-size: 16px !important;
     line-height: 24px !important;
     display: block !important;
     padding: 0 20px !important;
   }
 }
-/* /Meet Host Card */
+/* /Card Alt 3 */
