rename next-card -> card-horizontal-outlined

--- a/src/css/components/cards/card-horizontal-outlined.css
+++ b/src/css/components/cards/card-horizontal-outlined.css
@@ -1,5 +1,5 @@
-/* Next card */
-.next-card__time-list[class][class] {
+/* Card Horizontal Outlined */
+.card-horizontal-outlined__time-list[class][class] {
   scrollbar-width: none;
   display: flex;
   flex-wrap: nowrap;
@@ -8,89 +8,89 @@
   scroll-padding: 50%;
   scroll-snap-type: x mandatory;
 }
-.dir.next-card__time-list[class][class] {
+.dir.card-horizontal-outlined__time-list[class][class] {
   padding: 0;
 }
-.dir-ltr.next-card__time-list[class][class] {
+.dir-ltr.card-horizontal-outlined__time-list[class][class] {
   margin: var(--margin-top, 0) var(--margin-right, 0) var(--margin-bottom, 0)
     var(--margin-left, 0);
 }
-.next-card__time-list[class][class]::-webkit-scrollbar {
+.card-horizontal-outlined__time-list[class][class]::-webkit-scrollbar {
   display: none;
 }
 @media (min-width: 744px) {
-  .next-card__time-list[class][class] {
+  .card-horizontal-outlined__time-list[class][class] {
     overflow: visible;
   }
 }
-.next-card__time-item[class][class] {
+.card-horizontal-outlined__time-item[class][class] {
   scroll-snap-align: center;
 }
-.dir.next-card__time-item[class][class] {
+.dir.card-horizontal-outlined__time-item[class][class] {
   margin-bottom: var(--fgg-f-l-a);
 }
-.dir-ltr.next-card__time-item[class][class] {
+.dir-ltr.card-horizontal-outlined__time-item[class][class] {
   margin-right: 6px;
 }
-.dir-ltr.next-card__time-item[class][class]:last-child {
+.dir-ltr.card-horizontal-outlined__time-item[class][class]:last-child {
   margin-right: 0;
 }
-.next-card__btn[class][class] {
+.card-horizontal-outlined__btn[class][class] {
   color: var(--f-k-smk-x);
   font-weight: var(--jx-zk-pv);
   white-space: nowrap;
 }
-.dir.next-card__btn[class][class] {
+.dir.card-horizontal-outlined__btn[class][class] {
   background: var(--f-mkcy-f);
   border-radius: var(--i-g-gvoq);
   box-shadow: var(--availability-list-item_box-shadow);
   padding: var(--b-y-unon);
 }
 @media (min-width: 744px) {
-  .dir.next-card__btn[class][class] {
+  .dir.card-horizontal-outlined__btn[class][class] {
     border-radius: var(--go-h-jh-l);
     padding-top: var(--fgg-f-l-a);
     padding-bottom: var(--fgg-f-l-a);
   }
 }
-.next-card__btn-text-size[class][class] {
+.card-horizontal-outlined__btn-text-size[class][class] {
   font-size: var(--f-cv-j-j-p);
   line-height: var(--f-l-h-bac);
 }
-.next-card[class][class] {
+.card-horizontal-outlined[class][class] {
   display: flex;
   flex-direction: row;
   overflow: hidden;
 }
-.dir.next-card[class][class] {
+.dir.card-horizontal-outlined[class][class] {
   border: 1px solid var(--j-qkgmf);
   border-radius: var(--i-g-gvoq);
   padding: var(--b-y-unon);
 }
-.dir-ltr.next-card[class][class] {
+.dir-ltr.card-horizontal-outlined[class][class] {
   padding-right: var(--jaa-ni-h);
 }
-.next-card__media[class][class] {
+.card-horizontal-outlined__media[class][class] {
   width: 123px;
 }
-.next-card__body[class][class] {
+.card-horizontal-outlined__body[class][class] {
   display: flex;
   flex-direction: column;
   flex: 1;
 }
-.dir-ltr.next-card__body[class][class] {
+.dir-ltr.card-horizontal-outlined__body[class][class] {
   margin-left: var(--jaa-ni-h);
 }
-.next-card__btn-save-wrapper[class][class] {
+.card-horizontal-outlined__btn-save-wrapper[class][class] {
   display: flex;
   align-self: flex-end;
   height: 20px;
 }
-.dir.next-card__btn-save-wrapper[class][class] {
+.dir.card-horizontal-outlined__btn-save-wrapper[class][class] {
   margin-bottom: var(--h-x-sf-jw);
 }
-.next-card__price-info[class][class] {
+.card-horizontal-outlined__price-info[class][class] {
   font-size: var(--c-zdwk-p);
   line-height: var(--j-p-z-kco);
 }
-/* /Next card */
+/* /Card Horizontal Outlined */
