build renamed styles

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -6325,11 +6325,11 @@
     -webkit-transition: none;
   }
 }
-.dir.portrait-card-media-container {
+.dir.card-long__media {
   margin-bottom: var(--fgg-f-l-a);
 }
 @media (min-width: 744px) {
-  .dir.portrait-card-media-container {
+  .dir.card-long__media {
     margin-bottom: 10px;
   }
 }
