--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7612,6 +7612,48 @@ select[disabled] {
 }
 /* /Card Alt 4 */
 
+/* Card Alt 5 */
+.card-alt-5__subtitle {
+  text-transform: uppercase !important;
+  font-size: 12px !important;
+}
+@media (min-width: 1128px) {
+  .card-alt-5__text {
+    width: 85% !important;
+  }
+}
+.card-alt-5__title {
+  letter-spacing: -0.25px !important;
+}
+.card-alt-5__letter-spacing {
+  letter-spacing: 0.2px !important;
+}
+.card-alt-5__lite-image-container {
+  position: absolute !important;
+  top: 50% !important;
+  -webkit-transform: translateY(-50%) !important;
+  -ms-transform: translateY(-50%) !important;
+  transform: translateY(-50%) !important;
+  width: 100% !important;
+}
+.card-alt-5__img-overlay {
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  bottom: 0 !important;
+  padding: 0 15% !important;
+  text-align: center !important;
+}
+.card-alt-5__img-overlay-title {
+  font-size: 36px !important;
+  font-weight: 800 !important;
+  letter-spacing: 0 !important;
+  line-height: 40px !important;
+  text-shadow: 0 0 60px rgba(0, 0, 0, 0.4) !important;
+}
+/* /Card Alt 5 */
+
 /* Card Horizontal Basic */
 .card-horizontal-basic {
   -webkit-box-align: center !important;
@@ -8157,48 +8199,6 @@ select[disabled] {
   }
 }
 /* /Card */
-
-/* Entry card */
-.entry-card__subtitle {
-  text-transform: uppercase !important;
-  font-size: 12px !important;
-}
-@media (min-width: 1128px) {
-  .entry-card__text {
-    width: 85% !important;
-  }
-}
-.entry-card__title {
-  letter-spacing: -0.25px !important;
-}
-.entry-card__letter-spacing {
-  letter-spacing: 0.2px !important;
-}
-.entry-card__lite-image__container {
-  position: absolute !important;
-  top: 50% !important;
-  -webkit-transform: translateY(-50%) !important;
-  -ms-transform: translateY(-50%) !important;
-  transform: translateY(-50%) !important;
-  width: 100% !important;
-}
-.entry-card__img-overlay {
-  position: absolute !important;
-  top: 0 !important;
-  left: 0 !important;
-  right: 0 !important;
-  bottom: 0 !important;
-  padding: 0 15% !important;
-  text-align: center !important;
-}
-.entry-card__img-overlay-title {
-  font-size: 36px !important;
-  font-weight: 800 !important;
-  letter-spacing: 0 !important;
-  line-height: 40px !important;
-  text-shadow: 0 0 60px rgba(0, 0, 0, 0.4) !important;
-}
-/* /Entry card */
 
 /* New card */
 .new-card__container {
