rename card-long -> card-portrait

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -823,7 +823,7 @@
     transform: scale(0.05);
   }
 }
-@keyframes fade-in-card-long__overlay-control-wrapper {
+@keyframes fade-in-card-portrait__overlay-control-wrapper {
   from {
     opacity: 0;
   }
@@ -831,7 +831,7 @@
     opacity: 1;
   }
 }
-@keyframes zoomIn-card-long__slide-zoom {
+@keyframes zoomIn-card-portrait__slide-zoom {
   from {
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
@@ -1678,7 +1678,7 @@
     opacity: 1;
   }
 }
-@-webkit-keyframes fade-in-card-long__overlay-control-wrapper {
+@-webkit-keyframes fade-in-card-portrait__overlay-control-wrapper {
   from {
     opacity: 0;
   }
@@ -1686,7 +1686,7 @@
     opacity: 1;
   }
 }
-@-webkit-keyframes zoomIn-card-long__slide-zoom {
+@-webkit-keyframes zoomIn-card-portrait__slide-zoom {
   from {
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
@@ -7900,6 +7900,104 @@ select[disabled] {
 }
 /* /Card Horizontal Outlined */
 
+/* Card Portrait */
+.card-portrait__media-container {
+  overflow: hidden;
+  position: relative;
+  -webkit-mask-image: -webkit-radial-gradient(white, #000);
+  mask-image: -webkit-radial-gradient(white, #000);
+  -webkit-mask-image: -webkit-radial-gradient(white, #000);
+}
+@supports (overflow: clip) {
+  .card-portrait__media-container {
+    overflow: clip;
+  }
+}
+.card-portrait__media-container::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  pointer-events: none;
+}
+.dir.card-portrait__media-container::after {
+  border-radius: inherit;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.dir-ltr.card-portrait__media-container::after {
+  left: 0;
+  right: 0;
+}
+.dir-ltr.card-portrait__rounded-bl {
+  border-bottom-left-radius: var(--media-container_border-radius);
+}
+.dir-ltr.card-portrait__rounded-br {
+  border-bottom-right-radius: var(--media-container_border-radius);
+}
+.dir-ltr.card-portrait__rounded-tl {
+  border-top-left-radius: var(--media-container_border-radius);
+}
+.dir-ltr.card-portrait__rounded-tr {
+  border-top-right-radius: var(--media-container_border-radius);
+}
+.card-portrait {
+  font-weight: var(--e-y-j-d-v-j);
+  color: var(--f-k-smk-x);
+  position: relative;
+}
+.card-portrait--inactive {
+  opacity: 0.6;
+}
+.card-portrait__link {
+  display: block;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  outline: 0;
+}
+.dir.card-portrait__link {
+  border-radius: var(--i-g-gvoq);
+}
+.dir-ltr.card-portrait__link {
+  left: 0;
+}
+.dir.card-portrait__link::-moz-focus-inner {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+.dir.card-portrait__link:focus::-moz-focus-inner {
+  border: none;
+}
+.card-portrait__link:-moz-focusring {
+  outline: 0;
+}
+.card-portrait__link:focus-visible {
+  transition: box-shadow 0.2s;
+}
+.dir.card-portrait__link:focus-visible {
+  -webkit-transition: box-shadow 0.2s;
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
+}
+@media (prefers-reduced-motion: reduce) {
+  .card-portrait__link:focus-visible {
+    transition: none;
+  }
+  .dir.card-portrait__link:focus-visible {
+    -webkit-transition: none;
+  }
+}
+.dir.card-portrait__media {
+  margin-bottom: var(--fgg-f-l-a);
+}
+@media (min-width: 744px) {
+  .dir.card-portrait__media {
+    margin-bottom: 10px;
+  }
+}
+/* /Card Portrait */
+
 /* Card */
 .card__carousel[class][class] {
   --mis: var(--contentscroller_scroller_margin-inline-start);
@@ -10978,104 +11076,6 @@ fieldset[disabled] .btn {
   transform: translateY(-1px);
 }
 /* /Buttons */
-
-/* Card Long */
-.card-long__media-container {
-  overflow: hidden;
-  position: relative;
-  -webkit-mask-image: -webkit-radial-gradient(white, #000);
-  mask-image: -webkit-radial-gradient(white, #000);
-  -webkit-mask-image: -webkit-radial-gradient(white, #000);
-}
-@supports (overflow: clip) {
-  .card-long__media-container {
-    overflow: clip;
-  }
-}
-.card-long__media-container::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  pointer-events: none;
-}
-.dir.card-long__media-container::after {
-  border-radius: inherit;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-}
-.dir-ltr.card-long__media-container::after {
-  left: 0;
-  right: 0;
-}
-.dir-ltr.card-long__rounded-bl {
-  border-bottom-left-radius: var(--media-container_border-radius);
-}
-.dir-ltr.card-long__rounded-br {
-  border-bottom-right-radius: var(--media-container_border-radius);
-}
-.dir-ltr.card-long__rounded-tl {
-  border-top-left-radius: var(--media-container_border-radius);
-}
-.dir-ltr.card-long__rounded-tr {
-  border-top-right-radius: var(--media-container_border-radius);
-}
-.card-long {
-  font-weight: var(--e-y-j-d-v-j);
-  color: var(--f-k-smk-x);
-  position: relative;
-}
-.card-long--inactive {
-  opacity: 0.6;
-}
-.card-long__link {
-  display: block;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  outline: 0;
-}
-.dir.card-long__link {
-  border-radius: var(--i-g-gvoq);
-}
-.dir-ltr.card-long__link {
-  left: 0;
-}
-.dir.card-long__link::-moz-focus-inner {
-  border: none;
-  padding: 0;
-  margin: 0;
-}
-.dir.card-long__link:focus::-moz-focus-inner {
-  border: none;
-}
-.card-long__link:-moz-focusring {
-  outline: 0;
-}
-.card-long__link:focus-visible {
-  transition: box-shadow 0.2s;
-}
-.dir.card-long__link:focus-visible {
-  -webkit-transition: box-shadow 0.2s;
-  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
-}
-@media (prefers-reduced-motion: reduce) {
-  .card-long__link:focus-visible {
-    transition: none;
-  }
-  .dir.card-long__link:focus-visible {
-    -webkit-transition: none;
-  }
-}
-.dir.card-long__media {
-  margin-bottom: var(--fgg-f-l-a);
-}
-@media (min-width: 744px) {
-  .dir.card-long__media {
-    margin-bottom: 10px;
-  }
-}
-/* /Card Long */
 
 /* Explore Filter Daterange */
 .explore-filter-daterange__date-next-month {
