--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -6280,12 +6280,12 @@
     overflow: clip;
   }
 }
-.card-long {
+.card-portrait {
   font-weight: var(--e-y-j-d-v-j);
   color: var(--f-k-smk-x);
   position: relative;
 }
-.card-long__link {
+.card-portrait__link {
   display: block;
   height: 100%;
   position: absolute;
@@ -6293,47 +6293,47 @@
   width: 100%;
   outline: 0;
 }
-.dir.card-long__link {
+.dir.card-portrait__link {
   border-radius: var(--i-g-gvoq);
 }
-.dir-ltr.card-long__link {
+.dir-ltr.card-portrait__link {
   left: 0;
 }
-.dir.card-long__link::-moz-focus-inner {
+.dir.card-portrait__link::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.card-long__link:focus::-moz-focus-inner {
+.dir.card-portrait__link:focus::-moz-focus-inner {
   border: none;
 }
-.card-long__link:-moz-focusring {
+.card-portrait__link:-moz-focusring {
   outline: 0;
 }
-.card-long__link:focus-visible {
+.card-portrait__link:focus-visible {
   transition: box-shadow 0.2s;
 }
-.dir.card-long__link:focus-visible {
+.dir.card-portrait__link:focus-visible {
   -webkit-transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x);
 }
 @media (prefers-reduced-motion: reduce) {
-  .card-long__link:focus-visible {
+  .card-portrait__link:focus-visible {
     transition: none;
   }
-  .dir.card-long__link:focus-visible {
+  .dir.card-portrait__link:focus-visible {
     -webkit-transition: none;
   }
 }
-.dir.card-long__media {
+.dir.card-portrait__media {
   margin-bottom: var(--fgg-f-l-a);
 }
 @media (min-width: 744px) {
-  .dir.card-long__media {
+  .dir.card-portrait__media {
     margin-bottom: 10px;
   }
 }
-.card-long__btn-play {
+.card-portrait__btn-play {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -6347,7 +6347,7 @@
   color: var(--f-mkcy-f);
   pointer-events: all;
 }
-.dir.card-long__btn-play {
+.dir.card-portrait__btn-play {
   border-radius: 50%;
   border: 0;
   margin: 0;
@@ -6357,94 +6357,94 @@
   background: 0 0;
   -webkit-transition: transform 0.25s;
 }
-.card-long__btn-play:focus-visible {
+.card-portrait__btn-play:focus-visible {
   outline: 0;
   transition: box-shadow 0.2s;
 }
-.dir.card-long__btn-play:focus-visible {
+.dir.card-portrait__btn-play:focus-visible {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5), 0 0 0 5px rgba(255, 255, 255, 0.7);
   -webkit-transition: box-shadow 0.2s;
 }
-.dir.card-long__btn-play:focus-visible::-moz-focus-inner {
+.dir.card-portrait__btn-play:focus-visible::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.card-long__btn-play:focus-visible:focus::-moz-focus-inner {
+.dir.card-portrait__btn-play:focus-visible:focus::-moz-focus-inner {
   border: none;
 }
-.card-long__btn-play:focus-visible:-moz-focusring {
+.card-portrait__btn-play:focus-visible:-moz-focusring {
   outline: 0;
 }
-.card-long__btn-play:disabled {
+.card-portrait__btn-play:disabled {
   opacity: 0.5;
   color: graytext;
 }
-.dir.card-long__btn-play:disabled {
+.dir.card-portrait__btn-play:disabled {
   cursor: not-allowed;
 }
 @media (prefers-reduced-motion: reduce) {
-  .card-long__btn-play {
+  .card-portrait__btn-play {
     transition: none;
   }
-  .dir.card-long__btn-play {
+  .dir.card-portrait__btn-play {
     -webkit-transition: none;
   }
 }
-.card-long__btn-play:hover {
+.card-portrait__btn-play:hover {
   color: var(--bgxgx);
 }
-.dir.card-long__btn-play:hover::before {
+.dir.card-portrait__btn-play:hover::before {
   background: var(---pc-g-v-g);
 }
-.card-long__btn-play:active {
+.card-portrait__btn-play:active {
   color: var(--bgxgx);
   -webkit-transform: scale(0.92);
   -ms-transform: scale(0.92);
 }
-.dir.card-long__btn-play:active {
+.dir.card-portrait__btn-play:active {
   transform: scale(0.92);
 }
-.dir.card-long__btn-play:active::before {
+.dir.card-portrait__btn-play:active::before {
   background: var(---pc-g-v-g);
 }
-.dir.card-long__btn-play::-moz-focus-inner {
+.dir.card-portrait__btn-play::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.card-long__btn-play:focus::-moz-focus-inner {
+.dir.card-portrait__btn-play:focus::-moz-focus-inner {
   border: none;
 }
-.card-long__btn-play:-moz-focusring {
+.card-portrait__btn-play:-moz-focusring {
   outline: 0;
 }
-.card-long__btn-play:focus-visible {
+.card-portrait__btn-play:focus-visible {
   transition: box-shadow 0.2s;
 }
-.dir.card-long__btn-play:focus-visible {
+.dir.card-portrait__btn-play:focus-visible {
   -webkit-transition: box-shadow 0.2s;
   box-shadow: none;
 }
 @media (prefers-reduced-motion: reduce) {
-  .card-long__btn-play:focus-visible {
+  .card-portrait__btn-play:focus-visible {
     transition: none;
   }
-  .dir.card-long__btn-play:focus-visible {
+  .dir.card-portrait__btn-play:focus-visible {
     -webkit-transition: none;
   }
 }
-.dir.card-long__btn-play:focus-visible::before {
+.dir.card-portrait__btn-play:focus-visible::before {
   box-shadow: 0 0 0 2px var(--f-k-smk-x), 0 0 0 4px rgba(255, 255, 255, 0.8);
   background: var(---pc-g-v-g);
 }
-.card-long__btn-play:disabled {
+.card-portrait__btn-play:disabled {
   color: var(--j-qkgmf);
 }
-.dir.card-long__btn-play:disabled::before {
+.dir.card-portrait__btn-play:disabled::before {
   background: 0 0;
 }
-.card-long__btn-play::before {
+.card-portrait__btn-play::before {
   content: '';
   display: block;
   position: absolute;
@@ -6452,50 +6452,50 @@
   width: 32px;
   height: 32px;
 }
-.dir.card-long__btn-play::before {
+.dir.card-portrait__btn-play::before {
   border-radius: 50%;
 }
-.dir-ltr.card-long__btn-play::before {
+.dir-ltr.card-portrait__btn-play::before {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
-.card-long__btn-play::before {
+.card-portrait__btn-play::before {
   width: 32px;
   height: 32px;
 }
-.card-long__btn-play:hover {
+.card-portrait__btn-play:hover {
   color: var(--f-mkcy-f);
 }
-.card-long__btn-play:hover::before {
+.card-portrait__btn-play:hover::before {
   -webkit-backdrop-filter: blur(14px);
   backdrop-filter: blur(14px);
 }
-.dir.card-long__btn-play:hover::before {
+.dir.card-portrait__btn-play:hover::before {
   background: rgba(255, 255, 255, 0.16);
 }
-.card-long__btn-play:active {
+.card-portrait__btn-play:active {
   color: var(--f-mkcy-f);
 }
-.card-long__btn-play:active::before {
+.card-portrait__btn-play:active::before {
   -webkit-backdrop-filter: blur(14px);
   backdrop-filter: blur(14px);
 }
-.dir.card-long__btn-play:active::before {
+.dir.card-portrait__btn-play:active::before {
   background: rgba(255, 255, 255, 0.16);
 }
-.card-long__btn-play:focus-visible {
+.card-portrait__btn-play:focus-visible {
   -webkit-backdrop-filter: blur(14px);
   backdrop-filter: blur(14px);
 }
-.dir.card-long__btn-play:focus-visible {
+.dir.card-portrait__btn-play:focus-visible {
   background: rgba(255, 255, 255, 0.16);
 }
 .relative {
   position: relative;
 }
-.card-long__overlay {
+.card-portrait__overlay {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -6512,11 +6512,11 @@
   top: 0;
   pointer-events: none;
 }
-.dir-ltr.card-long__overlay {
+.dir-ltr.card-portrait__overlay {
   left: 0;
   right: 0;
 }
-.card-long__overlay-top {
+.card-portrait__overlay-top {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -6526,22 +6526,22 @@
   -ms-flex-pack: justify;
   justify-content: space-between;
 }
-.dir.card-long__overlay-top {
+.dir.card-portrait__overlay-top {
   padding: var(--media-overlay_top-row-padding);
 }
-.card-long__btn-save-wrapper {
+.card-portrait__btn-save-wrapper {
   pointer-events: auto;
 }
-.dir.card-long__btn-save-wrapper {
+.dir.card-portrait__btn-save-wrapper {
   margin-top: -5px;
 }
-.dir-ltr.card-long__btn-save-wrapper {
+.dir-ltr.card-portrait__btn-save-wrapper {
   margin-right: -3px;
 }
-.card-long__control-wrapper {
+.card-portrait__control-wrapper {
   visibility: hidden;
 }
-.dir.card-long__control-wrapper {
+.dir.card-portrait__control-wrapper {
   padding: 10px 15px;
 }
 .fade-in {
@@ -6549,13 +6549,13 @@
   visibility: visible;
 }
 
-.card-long__slides {
+.card-portrait__slides {
   height: 100%;
   width: 100%;
   overflow: hidden;
   position: relative;
 }
-.card-long__slide {
+.card-portrait__slide {
   opacity: 0;
   position: absolute;
   bottom: -2px;
@@ -6564,38 +6564,38 @@
   -webkit-transition-property: opacity;
   -webkit-transition-timing-function: cubic-bezier(0.895, 0.03, 0.685, 0.22);
 }
-.dir.card-long__slide {
+.dir.card-portrait__slide {
   transition-duration: 250ms;
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.895, 0.03, 0.685, 0.22);
 }
-.dir-ltr.card-long__slide {
+.dir-ltr.card-portrait__slide {
   left: -2px;
   right: -2px;
 }
-.card-long__slide--active {
+.card-portrait__slide--active {
   opacity: 1;
   -webkit-transition-duration: 250ms;
   -webkit-transition-timing-function: ease-out;
 }
-.dir.card-long__slide--active {
+.dir.card-portrait__slide--active {
   transition-duration: 250ms;
   transition-timing-function: ease-out;
 }
-.card-long__slide--grow {
+.card-portrait__slide--grow {
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
 }
-.dir.card-long__slide--grow {
+.dir.card-portrait__slide--grow {
   transform: scale(1.1);
 }
-.dir-ltr.card-long__slide-zoom {
+.dir-ltr.card-portrait__slide-zoom {
   -webkit-animation-duration: 2.5s;
   animation-duration: 2.5s;
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-name: zoomIn-card-long__slide-zoom;
-  animation-name: zoomIn-card-long__slide-zoom;
+  -webkit-animation-name: zoomIn-card-portrait__slide-zoom;
+  animation-name: zoomIn-card-portrait__slide-zoom;
   -webkit-animation-timing-function: ease-out;
   animation-timing-function: ease-out;
 }
@@ -6603,7 +6603,7 @@
 .relative {
   position: relative;
 }
-.card-long__carousel {
+.card-portrait__carousel {
   position: absolute;
   bottom: 0;
   top: 0;
@@ -6612,20 +6612,20 @@
   -webkit-transition-property: opacity, transform;
   -webkit-transition-timing-function: ease-out;
 }
-.dir.card-long__carousel {
+.dir.card-portrait__carousel {
   transition-duration: 0.2s;
   transition-property: opacity, transform;
   transition-timing-function: ease-out;
 }
-.dir-ltr.card-long__carousel {
+.dir-ltr.card-portrait__carousel {
   left: 0;
   right: 0;
 }
-.card-long__carousel--show {
+.card-portrait__carousel--show {
   opacity: 1;
   -webkit-transition-duration: 250ms;
 }
-.dir.card-long__carousel--show {
+.dir.card-portrait__carousel--show {
   transition-duration: 250ms;
 }
 .portrait-card-overline {
@@ -6667,13 +6667,13 @@
     overflow: clip;
   }
 }
-.card-long__overlay-bottom {
+.card-portrait__overlay-bottom {
   position: absolute;
   bottom: 0;
   height: 46px;
   width: 100%;
 }
-.dir-ltr.card-long__overlay-bottom {
+.dir-ltr.card-portrait__overlay-bottom {
   background: linear-gradient(
     360deg,
     rgba(0, 0, 0, 0.5) 0,
@@ -53167,7 +53167,7 @@ a:hover {
 
 @media (min-width:744px) {}
 
-@-webkit-keyframes fade-in-card-long__overlay-control-wrapper {
+@-webkit-keyframes fade-in-card-portrait__overlay-control-wrapper {
   from {
     opacity: 0;
   }
@@ -53177,7 +53177,7 @@ a:hover {
   }
 }
 
-@-webkit-keyframes zoomIn-card-long__slide-zoom {
+@-webkit-keyframes zoomIn-card-portrait__slide-zoom {
   from {
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
@@ -53203,7 +53203,7 @@ a:hover {
   }
 }
 
-@keyframes zoomIn-card-long__slide-zoom {
+@keyframes zoomIn-card-portrait__slide-zoom {
   from {
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
@@ -53217,7 +53217,7 @@ a:hover {
   }
 }
 
-@keyframes fade-in-card-long__overlay-control-wrapper {
+@keyframes fade-in-card-portrait__overlay-control-wrapper {
   from {
     opacity: 0;
   }
@@ -53227,7 +53227,7 @@ a:hover {
   }
 }
 
-@keyframes fade-in-card-long__overlay-control-wrapper {
+@keyframes fade-in-card-portrait__overlay-control-wrapper {
   from {
     opacity: 0;
   }
@@ -53237,7 +53237,7 @@ a:hover {
   }
 }
 
-@keyframes zoomIn-card-long__slide-zoom {
+@keyframes zoomIn-card-portrait__slide-zoom {
   from {
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
