--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -51592,7 +51592,7 @@ a:hover {
   color: var(--f-mkcy-f) !important;
   width: 100% !important;
 }
-._e296pg {
+.relative {
   position: relative !important;
 }
 ._qx2ic59 {
