--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4058,7 +4058,7 @@ select[disabled] {
   .d-md-inline-block {
     display: inline-block !important;
   }
-  .d-md-none {
+  .hidden-md {
     display: none !important;
   }
   .d-md-flex {
