--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -30,7 +30,7 @@
   .d-md-inline-block {
     display: inline-block !important;
   }
-  .d-md-none {
+  .hidden-md {
     display: none !important;
   }
   .d-md-flex {
