--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4052,7 +4052,7 @@ select[disabled] {
   transform: translateY(15px);
 }
 @media (min-width: 744px) {
-  .d-md-block {
+  .block-md {
     display: block !important;
   }
   .d-md-inline-block {
