--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -24,7 +24,7 @@
   transform: translateY(15px);
 }
 @media (min-width: 744px) {
-  .d-md-block {
+  .block-md {
     display: block !important;
   }
   .d-md-inline-block {
