--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4061,7 +4061,7 @@ select[disabled] {
   .hidden-md {
     display: none !important;
   }
-  .d-md-flex {
+  .flex-md {
     display: flex !important;
   }
 }
