--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4085,7 +4085,7 @@ select[disabled] {
   .d-lg-block {
     display: block !important;
   }
-  .d-lg-none {
+  .hidden-lg {
     display: none !important;
   }
 }
