--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -28790,7 +28790,7 @@ html :where(img[class*='wp-image-']) {
   }
 }
 @media (min-width: 1200px) {
-  .d-lg-flex {
+  .flex-lg {
     display: flex !important;
   }
 }
