--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -47512,7 +47512,7 @@ tr.show-desktop {
 .atm_vv_1q9ccgz {
   white-space: nowrap;
 }
-.atm_9s_glywfm {
+.hidden {
   display: none;
 }
 .d13up9z1[class][class] {
@@ -49521,7 +49521,7 @@ a:hover {
   font-weight: 600 !important;
   text-decoration: underline !important;
 }
-._1u9fru1 {
+.hidden {
   display: none !important;
 }
 ._xtka45 {
