--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4030,7 +4030,7 @@ select[disabled] {
 .hidden {
   display: none !important;
 }
-.d-flex {
+.flex {
   display: flex !important;
 }
 .hide-scrollbar::-webkit-scrollbar {
