--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -47849,7 +47849,7 @@ tr.show-desktop {
   padding-bottom: 12px !important;
   flex: 0 0 50% !important;
 }
-.atm_9s_1txwivl {
+.flex {
   display: flex;
 }
 ._1oj8hra {
